fix: break overflowing words in text views
Closes #651

--- a/packages/form-js-viewer/assets/form-js-base.css
+++ b/packages/form-js-viewer/assets/form-js-base.css
@@ -711,6 +711,10 @@
   list-style-type: none;
 }
 
+.fjs-container .fjs-form-field-text {
+  overflow-wrap: break-word;
+}
+
 .fjs-container .fjs-form-field-text a {
   color: var(--color-accent);
 }
